--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -55,10 +56,16 @@ dependencies {
     implementation("io.coil-kt:coil:$coil_version")
 
     def retrofit_version = '2.9.0'
-    implementation "com.squareup.retrofit2:retrofit: $retrofit_version"
-    implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version "
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation platform('com.google.firebase:firebase-bom:31.2.3')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+
+    implementation 'com.google.firebase:firebase-auth-ktx'
+
+
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
 
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
