--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,6 +85,9 @@ dependencies {
     //Facebook Login
     implementation 'com.facebook.android:facebook-login:latest.release'
 
+    //Firestore
+    implementation 'com.google.firebase:firebase-firestore-ktx'
+
     //DataStore
     def dataStore_version = '1.0.0'
     implementation "androidx.datastore:datastore-preferences:$dataStore_version"
