--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,14 @@
 
 
 buildscript {
+
+    //safeArgs
+    ext.nav_version = "2.5.3"
+
+
     dependencies {
         classpath 'com.google.gms:google-services:4.3.15'
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
 }
 
