--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
         <activity
             android:name=".ui.activity.MainActivity"
             android:exported="true"
-
+            android:configChanges="orientation|keyboardHidden|screenSize"
            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
