--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,6 +88,7 @@ dependencies {
 
     //Facebook Login
     implementation 'com.facebook.android:facebook-login:latest.release'
+    implementation 'com.facebook.android:facebook-android-sdk:[8,9)'
 
     //Firestore
     implementation 'com.google.firebase:firebase-firestore-ktx'
