--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ android {
 dependencies {
 
     //Material Design
-    def material_version = '1.8.0'
+    def material_version = '1.9.0'
     implementation "com.google.android.material:material:$material_version"
 
     //Koin
@@ -55,7 +55,7 @@ dependencies {
     implementation "io.insert-koin:koin-android:$koin_version"
 
     //Lifecycle
-    def lifecycle_version = '2.6.0'
+    def lifecycle_version = '2.6.1'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
 
     //Navigation
@@ -72,19 +72,23 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
 
     //Room Database
-    def room_version = "2.5.0"
+    def room_version = "2.5.1"
     implementation "androidx.room:room-runtime:$room_version"
     ksp "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
 
     //Firebase Services
-    implementation platform('com.google.firebase:firebase-bom:31.2.3')
+    implementation platform('com.google.firebase:firebase-bom:32.0.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
+
+
+    //Google Auth
     implementation 'com.google.android.gms:play-services-auth:20.5.0'
+
 
     //Firebase Auth
     implementation 'com.google.firebase:firebase-auth-ktx'
-    implementation 'com.google.firebase:firebase-auth-ktx:21.3.0'
+
 
     //Facebook Login
     implementation 'com.facebook.android:facebook-login:latest.release'
@@ -97,7 +101,7 @@ dependencies {
     def dataStore_version = '1.0.0'
     implementation "androidx.datastore:datastore-preferences:$dataStore_version"
 
-    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
 
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
