--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
 
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+
 
     <uses-permission
         android:name="com.google.android.gms.permission.AD_ID"
@@ -24,6 +27,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.StudentDiary"
         tools:targetApi="31">
+
+        <service android:name=".utils.services.PomodoroService"/>
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
