--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
 
 
 
+
+
     <uses-permission
         android:name="com.google.android.gms.permission.AD_ID"
         tools:node="remove" />
@@ -27,6 +29,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.StudentDiary"
         tools:targetApi="31">
+
+        <receiver android:name=".utils.broadcastReceiver.PomodoroNotificationBroadcastReceiver"/>
 
         <service android:name=".utils.services.PomodoroService"/>
 
