--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.StudentDiary"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
 
         <receiver android:name=".utils.broadcastReceiver.PomodoroNotificationBroadcastReceiver" />
