--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,6 +108,10 @@ dependencies {
     def lottieVersion = "6.0.0"
     implementation "com.airbnb.android:lottie:$lottieVersion"
 
+    //Work manager
+    def work_version = "2.8.0"
+    implementation "androidx.work:work-runtime-ktx:$work_version"
+
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
 
