--- a/app/build.gradle
+++ b/app/build.gradle
@@ -112,6 +112,10 @@ dependencies {
     def work_version = "2.8.1"
     implementation "androidx.work:work-runtime-ktx:$work_version"
 
+    //Biometric
+    def biometric_version = "1.2.0-alpha05"
+    implementation "androidx.biometric:biometric-ktx:$biometric_version"
+
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
 
