--- a/app/build.gradle
+++ b/app/build.gradle
@@ -116,6 +116,7 @@ dependencies {
     def biometric_version = "1.2.0-alpha05"
     implementation "androidx.biometric:biometric-ktx:$biometric_version"
 
+    //Browser
     def browser_version = "1.5.0"
     implementation "androidx.browser:browser:$browser_version"
 
