--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,13 +4,11 @@
 
     <uses-permission android:name="android.permission.READ_CALENDAR" />
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
-
     <uses-permission android:name="android.permission.INTERNET" />
-
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
-
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32" />
 
     <uses-permission
         android:name="com.google.android.gms.permission.AD_ID"
@@ -18,7 +16,7 @@
 
     <application
         android:name=".StudentDiaryApplication"
-        android:allowBackup="false"
+        android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -29,7 +27,6 @@
         tools:targetApi="31">
 
         <receiver android:name=".broadcastReceiver.PomodoroNotificationBroadcastReceiver" />
-
         <service android:name=".services.PomodoroService" />
 
         <meta-data
@@ -39,7 +36,6 @@
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_color"
             android:resource="@color/colorPrimary" />
-
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
@@ -82,7 +78,6 @@
             </intent-filter>
 
         </service>
-
 
     </application>
 
